apps/wooco-spring/overlay/prod/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wooco-spring-http
  namespace: wooco-spring
spec:
  hostnames:
    - "api-v2.wooco.kr"
